--- a/Sanjay Project/Info.plist
+++ b/Sanjay Project/Info.plist
@@ -21,5 +21,7 @@
 			</array>
 		</dict>
 	</dict>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>We need access to your photo library to let you choose a profile picture.</string>
 </dict>
 </plist>
